Better way to convert a path into a URL.
git-svn-id: https://svn.win.tue.nl/repos/prom/Packages/ProM-Framework/Trunk@43292 a68f48d4-8d00-424f-b812-3f22a534a02a